<resources>
    <string name="app_name">Vult</string>
    <!-- Preference Titles -->
    <string name="security_header">Security</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="biometrics_title">Enable biometrics</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="create">Create</string>
    <string name="import_page_prompt">Import</string>
    <string name="new_master_password">New master password</string>
    <string name="creation_prompt">Create a master password to keep the rest of your passwords safe. Make sure you record it somewhere - if you lose it you will lose all your data</string>
    <string name="import_option_prompt">or</string>
    <string name="vult_logo">Vult logo</string>
    <string name="creation_import_exp">from an existing Vult server</string>
    <string name="enable_biometrics_dialog">Do you want to enable biometrics for faster login?</string>
    <string name="bio_key">bio</string>
    <string name="use_biometrics">Use biometrics</string>
    <string name="log_in">Log in</string>
    <string name="master_password">Master password</string>
    <string name="login_prompt">Log in to access your stored credentials</string>
    <string name="add_fab_description">Add credential</string>
    <string name="password">Password</string>
    <string name="credential_name">Credential name</string>
    <string name="new_field_hint">Field name</string>
    <string name="password_hint">Password</string>
    <string name="password_generation_title">Password generation</string>
    <string name="gen_def_length">generator_default_length</string>
    <string name="gen_def_lower">generator_default_lowercase</string>
    <string name="gen_def_upper">generator_default_uppercase</string>
    <string name="gen_def_num">generator_default_number</string>
    <string name="gen_def_sym">generator_default_symbols</string>
    <string name="search">Search</string>
    <string name="length">Length</string>
    <string name="import_raw">pref_import</string>
    <string name="export_raw">pref_export</string>
    <string name="vult_server_endpoint">Vult server endpoint</string>
    <string name="user_key">User key</string>
    <string name="server_url_description">The connection URL of your Vult server e.g. https://vultserver.com:8000</string>
    <string name="user_key_description">A key associated with a user (alias) configured in the server</string>
    <string name="import_password_description">The password used to encrypt/decrypt this store</string>
    <string name="import_button">Import</string>
    <string name="pref_sync">pref_sync</string>
    <string name="sync_dialog_description">Set up a <a href="https://github.com/sqooid/vult-server">Vult server</a> to backup and synchronize your passwords</string>
    <string name="pref_auto_sync">enable_auto_sync</string>
</resources>