<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/security_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/bio_key"
            app:title="@string/biometrics_title" />


    </PreferenceCategory>

    <PreferenceCategory app:title="Default password generator settings"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:defaultValue="8"
            app:key="@string/gen_def_length"
            app:title="Length" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/gen_def_upper"
            app:title="Use upper case" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/gen_def_num"
            app:title="Use numbers" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/gen_def_sym"
            app:title="Use symbols" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Import and export" app:iconSpaceReserved="false">
        <Preference app:title="Import raw file" app:key="@string/import_raw" />
        <Preference app:title="Export raw file" app:key="@string/export_raw" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Synchronization" app:iconSpaceReserved="false">
        <Preference app:title="Enable" app:key="@string/pref_sync" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/pref_auto_sync"
            app:title="Sync automatically" />
    </PreferenceCategory>

</PreferenceScreen>