<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.sqooid.vult.fragments.createaccount.CreateAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="?attr/colorSurface"
        android:id="@+id/create_account_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".fragments.createaccount.CreateAccount">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:maxWidth="@dimen/text_max_width"
            android:text="@string/creation_prompt"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_master_password_wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_master_password_wrapper"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:errorIconDrawable="@null"
            app:hintEnabled="false"
            app:boxBackgroundColor="@color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/button_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_master_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/new_master_password"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={viewmodel.masterPassword}"
                android:textAlignment="center"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/create"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_master_password_wrapper" />

        <Button
            android:id="@+id/button_import_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/import_page_prompt"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/import_option_prompt"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/button_import_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_create_account" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:contentDescription="@string/vult_logo"
            android:src="@drawable/ic_vult_logo"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creation_import_exp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_import_page" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>